plugins {
	id 'org.springframework.boot' version '2.1.6.RELEASE'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'jacoco'

group = 'net.kodar'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
	compile("org.springframework.boot:spring-boot-starter-security")
	compile 'mysql:mysql-connector-java'
	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
	testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.6.RELEASE'
    
}
